--- a/PR111-SugarORM/app/src/main/res/layout/activity_main_item.xml
+++ b/PR111-SugarORM/app/src/main/res/layout/activity_main_item.xml
@@ -2,30 +2,50 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:layout_height="72dp">
+    android:layout_height="wrap_content"
+    android:background="@drawable/item_background_selector"
+    android:minHeight="@dimen/three_lines_tile_height">
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imgAvatar"
+        android:layout_width="@dimen/three_lines_avatar_height"
+        android:layout_height="@dimen/three_lines_avatar_height"
+        android:layout_marginLeft="@dimen/three_lines_avatar_marginLeft"
+        android:layout_marginStart="@dimen/three_lines_avatar_marginLeft"
+        android:layout_marginTop="@dimen/three_lines_avatar_marginTop"
+        app:border_width="1dp"
+        app:border_color="@color/accent" />
 
     <TextView
         android:id="@+id/lblNombre"
-        android:layout_width="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="20dp"
-        android:textSize="16sp"
-        tools:text="Baldomero"
-        android:textStyle="bold"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingTop="@dimen/three_lines_text_paddingTop"
+        tools:text="Nombre"
+        android:textSize="@dimen/three_lines_primary_text_textSize"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/lblEdad"
-        android:layout_width="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:id="@+id/lblCurso"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingRight="@dimen/three_lines_text_paddingRight"
+        tools:text="Curso"
         android:layout_below="@+id/lblNombre"
-        android:textSize="14sp"
-        tools:text="33"
-        android:layout_height="wrap_content" />
+        android:textSize="@dimen/three_lines_secundary_text_textSize"
+        android:textStyle="italic" />
 
+    <TextView
+        android:id="@+id/lblDireccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/three_lines_text_paddingBottom"
+        android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingRight="@dimen/three_lines_text_paddingRight"
+        tools:text="Dirección"
+        android:layout_below="@+id/lblCurso"
+        android:textSize="@dimen/three_lines_secundary_text_textSize" />
 </RelativeLayout>
