--- a/PR111-SugarORM/app/src/main/res/layout/activity_main.xml
+++ b/PR111-SugarORM/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,49 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/lstAlumnos"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:divider="@drawable/item_divider"
+        android:dividerHeight="1dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:id="@+id/lstAlumnos" />
-
-    <TextView
-        android:id="@+id/lblNoHayAlumnos"
+        android:paddingBottom="8dp" />
+    <RelativeLayout
+        android:id="@+id/rlListaVacia"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:clickable="true"
+        android:gravity="center_horizontal|center_vertical" >
+        <ImageView
+            android:id="@+id/imgNuevoAlumno"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:contentDescription="@string/no_hay_alumnos"
+            android:src="@drawable/ic_user_add" />
+        <TextView
+            android:id="@+id/lblNoHayAlumnos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgNuevoAlumno"
+            android:layout_centerHorizontal="true"
+            android:text="@string/no_hay_alumnos" />
+    </RelativeLayout>
+    <com.software.shell.fab.ActionButton
+        android:id="@+id/btnAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawablePadding="@dimen/empty_drawablePadding"
-        android:drawableTop="@drawable/ic_no_hay_alumnos"
-        android:layout_gravity="center"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/no_hay_alumnos" />
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        fab:button_color="@color/accent"
+        fab:button_colorPressed="@color/accent_light"
+        fab:image="@drawable/fab_plus_icon"
+        fab:show_animation="@anim/fab_roll_from_down"
+        fab:hide_animation="@anim/fab_roll_to_down" />
 
 </FrameLayout>
