--- a/PR111-SugarORM/app/src/main/res/values/styles.xml
+++ b/PR111-SugarORM/app/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="actionModeBackground">@color/actionModeBackground</item>
+        <item name="actionMenuTextColor">@color/actionMenuTextColor</item>
     </style>
 
 </resources>
