--- a/PR089-StartedService/app/src/main/res/drawable/item_divider.xml
+++ b/PR089-StartedService/app/src/main/res/drawable/item_divider.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="@dimen/three_lines_text_paddingLeft">
         <shape android:shape="rectangle">
-            <solid android:color="@color/list_divider" />
+            <solid android:color="@color/divider" />
         </shape>
     </item>
 </layer-list>
