--- a/PR089-StartedService/app/src/main/res/layout/activity_main.xml
+++ b/PR089-StartedService/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,47 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lstCanciones"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity" />
+    android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/lstCanciones"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp" />
+    <RelativeLayout
+        android:id="@+id/rlListaVacia"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:gravity="center_horizontal|center_vertical" >
+        <ImageView
+            android:id="@+id/imgNuevaCancion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:contentDescription="@string/no_hay_canciones"
+            android:src="@drawable/ic_action_playlist_add" />
+        <TextView
+            android:id="@+id/lblNoHayCanciones"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgNuevaCancion"
+            android:layout_centerHorizontal="true"
+            android:text="@string/no_hay_canciones" />
+    </RelativeLayout>
+    <com.software.shell.fab.ActionButton
+        android:id="@+id/btnPlayStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        fab:button_color="@color/accent"
+        fab:button_colorPressed="@color/accent_light"
+        fab:image="@drawable/fab_play"
+        fab:show_animation="@anim/fab_roll_from_down"
+        fab:hide_animation="@anim/fab_roll_to_down" />
+
+</FrameLayout>
