--- a/PR111-SugarORM/app/src/main/res/layout/activity_main.xml
+++ b/PR111-SugarORM/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ListView
         android:id="@+id/lstAlumnos"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:divider="@drawable/item_divider"
         android:dividerHeight="1dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp" />
     <RelativeLayout
         android:id="@+id/rlListaVacia"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:gravity="center_horizontal|center_vertical" >
         <ImageView
