--- a/PR096-NotificationStyles/app/src/main/res/layout/activity_main.xml
+++ b/PR096-NotificationStyles/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,51 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="es.iessaladillo.pedrojoya.pr096.MainActivity">
+    app:orientation="horizontal"
+    app:columnCount="@integer/grid_columnCount">
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/big_text_style"
         android:id="@+id/btnBigTextStyle"
-        android:layout_alignParentTop="true" />
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/big_picture_style"
         android:id="@+id/btnBigPictureStyle"
-        android:layout_below="@+id/btnBigTextStyle"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/inbox_style"
         android:id="@+id/btnInboxStyle"
-        android:layout_below="@+id/btnBigPictureStyle"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/progress_bar"
         android:id="@+id/btnProgressBar"
-        android:layout_below="@+id/btnInboxStyle"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/progreso_indeterminado"
         android:id="@+id/btnProgresoIndeterminado"
-        android:layout_below="@+id/btnProgressBar"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Resultado"
-        android:id="@+id/btnResultado"
-        android:layout_below="@+id/btnProgresoIndeterminado"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
 
-</RelativeLayout>
+    <Button
+        android:text="@string/heads_up_notification"
+        android:id="@+id/btnHeadsUp"
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"/>
+
+</android.support.v7.widget.GridLayout>
